--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ body {
     min-height: 100vh;
     align-items: center;
 
-    background-image: url("background.svg");
+    background-image: url("images/background.svg");
     background-repeat: no-repeat;
     background-size: contain;
 }
