--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@
     font-family: "JetBrains Sans", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #000000;
+    background-color: #1e293b;
     text-align: center;
 }
 
@@ -24,10 +24,7 @@ body {
     min-width: 320px;
     min-height: 100vh;
     align-items: center;
-
-    background-image: url("images/background.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
+    background-color: #1e293b;
 }
 
 h1 {
